Navbar styling; adding `navbar-item-link` class; adding color transition;

--- a/src/sass/settings/colors.scss
+++ b/src/sass/settings/colors.scss
@@ -14,7 +14,7 @@ $link-color-hover: #28B463 !default;
 
 
 // Primary colors derived from Bulma's initial variables:
-$primary: #DB9D47;
+$primary: #729EA1;
 
 
 
