--- a/src/sass/components/nav.scss
+++ b/src/sass/components/nav.scss
@@ -1,4 +1,20 @@
+// - - - - - - - - - - - - - - - - - - - - - - - - 
+// NavBar
+// - - - - - - - - - - - - - - - - - - - - - - - - 
+
+// extending navbar class of Bulma framework
 .navbar {
     background-color: transparent;
-    padding: 10px 6%;
-}
+    padding: 10px 12% 0 6%;
+
+    .navbar-item {
+        transition: color $global-transition-timing ease;
+    }
+
+    // custom class not provided by the framework
+    .navbar-item-link.is-active {
+        border-bottom: 3px solid $primary;
+        color: $primary;
+        font-weight: 700;
+    }
+} /* </navbar> */
