--- a/src/sass/settings/global.scss
+++ b/src/sass/settings/global.scss
@@ -10,16 +10,22 @@
 * 1. Specifies a transition effect with a slow start and end. (W3S)
 */
 
-$global-radius		 : 3px !default;
-$global-transition	 : all 300ms ease-in-out !default; /* [1] */
-$global-spacing-unit : 1.5rem !default;
-$global-font-size	 : 16px !default;
-$global-line-height  : 24px !default;
+$global-radius		        : 3px !default;
+$global-transition-timing   : 330ms;
+$global-transition	        : all $global-transition-timing ease-in-out !default; /* [1] */
+$global-spacing-unit        : 1.5rem !default;
+$global-font-size	        : 16px !default;
+$global-line-height         : 24px !default;
 
 
 // Bulma related global variables
-$family-sans-serif      : 'Nunito', sans-serif;
-$body-background-color  : #fff;
-$control-border-width   : 2px;
-$input-border-color     : transparent;
-$input-shadow   : none;
+
+// Font Family
+$family-sans-serif: 'Nunito', sans-serif;
+
+// Navbar
+$navbar-item-hover-color: #000;
+$navbar-item-hover-background-color: none; 
+$navbar-tab-active-border-bottom-color: $primary;
+$navbar-padding-vertical: 0;
+
