--- a/src/sass/components/promotion.scss
+++ b/src/sass/components/promotion.scss
@@ -1,7 +1,34 @@
-.promotion__text {
+.promotion {
+    display: flex;
+        flex-direction: column;
+        justify-content: center;
     margin-left: 13.4%;
-    margin-top: 15%;
-}
+    margin-right: 10%;
+    height: 100vh;
+
+    .promotion__tag {
+        display: inline-block;
+        background: $primary;
+        border-radius: 4px;
+        color: #fff;
+        font-size: .65rem;
+        font-weight: 700;
+        margin-bottom: 5px;
+        padding: .25rem .4rem;
+        text-transform: uppercase;
+    }
+
+    .promotion__description {
+        color: #5E5D5B;
+        line-height: 1.7;
+    }
+
+    .promotion__location {
+        color: #00d1b2;
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+} /* </promotion__text> */
 
 .promotion__image {
     object-fit: cover;
