--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -73,6 +73,7 @@
 @import '../../node_modules/bulma/sass/layout/section.sass';
 @import '../../node_modules/bulma/sass/elements/container.sass';
 @import '../../node_modules/bulma/sass/form/_all.sass';
+@import '../../node_modules/bulma/sass/components/modal.sass';
 @import '../../node_modules/bulma/sass/grid/columns.sass';
 @import './objects/countdown.scss';
 
