--- a/src/assets/sass/settings/global.scss
+++ b/src/assets/sass/settings/global.scss
@@ -28,4 +28,4 @@ $navbar-item-hover-color: #000;
 $navbar-item-hover-background-color: none; 
 $navbar-tab-active-border-bottom-color: $primary;
 $navbar-padding-vertical: 0;
-
+$navbar-breakpoint: $tablet; 
