Working on responsiveness in the Promotion.scss

--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -76,6 +76,7 @@
 @import '../../../node_modules/bulma/sass/components/modal.sass';
 @import '../../../node_modules/bulma/sass/grid/columns.sass';
 @import './objects/countdown.scss';
+@import './objects/columns.scss';
 
 
 // Components
