Articles component; Articles sass; Articles header; Fixing react router issue;

--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -84,6 +84,7 @@
 @import '../../../node_modules/bulma/sass/components/navbar.sass';
 @import './components/nav.scss'; // extending Bulma's navbar styles  
 @import './components/promotion.scss';
+@import './components/articles.scss';
 
 // Utilities
 // + utilities and helper classes with ability to override anything 
