Show article component; Divider object styles;

--- a/src/assets/sass/settings/colors.scss
+++ b/src/assets/sass/settings/colors.scss
@@ -15,7 +15,7 @@ $link-color-hover: #28B463 !default;
 
 // Primary colors derived from Bulma's initial variables:
 $primary: #729EA1;
-
+$secondary: #DF3A01;
 
 
 
