--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -77,6 +77,7 @@
 @import '../../../node_modules/bulma/sass/grid/columns.sass';
 @import './objects/countdown.scss';
 @import './objects/columns.scss';
+@import './objects/divider.scss';
 
 
 // Components
