--- a/src/assets/sass/components/articles.scss
+++ b/src/assets/sass/components/articles.scss
@@ -2,6 +2,26 @@
 // Articles
 // - - - - - - - - - - - - - - - - - - - - - - - - 
 
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px&display=swap');
+
+.articles__container {
+    margin: 3rem auto 0 auto;
+    max-width: 800px;
+    width: 100%;
+    font-family: 'Slabo 27px', serif;
+}
+
+.articles__headline {
+    color: #000;
+    display: inline-block;
+    font-size: 3rem;
+
+    .articles__headline__icon {
+        color: $secondary;
+        font-size: 2rem;
+    }
+} /* </articles__headline> */
+
 .articles__header {
     height: 40vh;
 
@@ -11,3 +31,25 @@
         width: 100%;
     }
 } /* </articles__header> */
+
+.article {
+    margin-bottom: 5rem;
+
+    .article__title {
+        border-bottom: 3px solid transparent;
+        color: #000;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 2.5rem;
+
+        &:hover {
+            border-bottom: 3px dotted $secondary;
+        }
+    } /* </article__title> */
+
+    .article__description {
+        font-size: 1.3rem;
+        line-height: 1.3;
+    }
+
+} /* </article> */
