MOving logo to the assets folder

--- a/src/assets/sass/components/nav.scss
+++ b/src/assets/sass/components/nav.scss
@@ -17,9 +17,9 @@
 
     // Positioning and styling SET's logo 
     .navbar-brand .navbar-item {
-        background: url(/img/logo.png) no-repeat center center;
+        background: url(/src/assets/images/logo.png) no-repeat center center;
         background-size: cover;
-        color: #000;
+        color: #000;    
         height: 50px;
         font-size: 1.2rem;
         font-weight: 700;
