Import Logo and Tournament images to the assets folder which will activate service worker on them

--- a/src/assets/sass/components/nav.scss
+++ b/src/assets/sass/components/nav.scss
@@ -17,9 +17,10 @@
 
     // Positioning and styling SET's logo 
     .navbar-brand .navbar-item {
-        background: url(/src/assets/images/logo.png) no-repeat center center;
+        background-position: center center;
+        background-repeat: no-repeat;
         background-size: cover;
-        color: #000;    
+        color: #000;
         height: 50px;
         font-size: 1.2rem;
         font-weight: 700;
