Adding favicon and logo images used by the manifest file

--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -78,7 +78,7 @@
 @import './objects/countdown.scss';
 @import './objects/columns.scss';
 @import './objects/divider.scss';
-@import './objects//imgLoaders.scss';
+@import './objects/loaders.scss';
 
 // Components
 // + specific UI components.
